--- a/app/about.html
+++ b/app/about.html
@@ -39,7 +39,6 @@
               </li>
             </ul>
           </nav>
-
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
@@ -97,13 +96,127 @@
             </div>
           </div>
         </div>
-
         <div class="about__popup">
-          <a class="about__popup-play" href="">
+          <a class="about__popup-play" data-fancybox href="https://youtu.be/LUqfWd8eCeU">
             <img class="about__popup-imgbtn" src="images/play.svg" alt="play button">
           </a>
         </div>
       </section>
+
+      <section class="inspiration">
+        <div class="container-fluid">
+          <div class="inspiration__inner">
+            <img class="inspiration__images" src="images/inspiration-decor.png" alt="images">
+            <div class="inspiration__content">
+              <h3 class="inspiration__title">
+                Our Inspiration in details
+              </h3>
+              <p class="inspiration__text">
+                Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+              </p>
+              <ul class="inspiration__list">
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Design and technical drawings</p>
+                    <p class="inspiration__num">80%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 80%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Measurments</p>
+                    <p class="inspiration__num">70%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 70%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Furniture functionality analysis</p>
+                    <p class="inspiration__num">75%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 75%"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Interior visualization</p>
+                    <p class="inspiration__num">40%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 40%"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="partners">
+        <div class="container-fluid">
+          <div class="partners__items">
+            <img class="parters__item" src="images/partners/partner1.svg" alt="">
+            <img class="parters__item" src="images/partners/partner2.svg" alt="">
+            <img class="parters__item" src="images/partners/partner1.svg" alt="">
+            <img class="parters__item" src="images/partners/partner2.svg" alt="">
+            <img class="parters__item" src="images/partners/partner1.svg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="collection">
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="images/content/collection-6.jpg" alt="">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Truffaut literally trust
+            </h6>
+            <p class="collection__info-text">
+              Living room furntiture | Chair
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="images/content/collection-7.jpg" alt="">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Truffaut literally trust
+            </h6>
+            <p class="collection__info-text">
+              Living room furntiture | Chair
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="images/content/collection-8.jpg" alt="">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Truffaut literally trust
+            </h6>
+            <p class="collection__info-text">
+              Living room furntiture | Chair
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="images/content/collection-9.jpg" alt="">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Truffaut literally trust
+            </h6>
+            <p class="collection__info-text">
+              Living room furntiture | Chair
+            </p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="images/content/collection-10.jpg" alt="">
+          <div class="collection__info">
+            <h6 class="collection__info-title">
+              Truffaut literally trust
+            </h6>
+            <p class="collection__info-text">
+              Living room furntiture | Chair
+            </p>
+          </div>
+        </a>
+      </div>
 
     </main>
 
