--- a/app/contacts.html
+++ b/app/contacts.html
@@ -35,7 +35,7 @@
                 <a class="menu__list-link" href="#">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link menu__list-link--active" href="#">Contact</a>
               </li>
             </ul>
           </nav>
@@ -71,11 +71,69 @@
               <a class="breadcrumbs__link" href="">Home</a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="">About</a>
+              <a class="breadcrumbs__link" href="">Contact</a>
             </li>
           </ul>
         </div>
       </div>
+
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7773.927800045432!2d-122.41652362208511!3d37.79847637201602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580e839d7e541%3A0xf89b6220c55337a7!2zR3JlZW4gU3QsIFNhbiBGcmFuY2lzY28sIENBIDk0MTMzLCDQodCo0JA!5e0!3m2!1sru!2sru!4v1655583278465!5m2!1sru!2sru" width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
+      <section class="contact">
+        <div class="container">
+          <h3 class="contact__title">
+            Contact us
+          </h3>
+          <ul class="contact__social">
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="#">
+                <img class="contact__social-img" src="images/facebook.svg" alt="">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="#">
+                <img class="contact__social-img" src="images/instagram.svg" alt="">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="#">
+                <img class="contact__social-img" src="images/pinterest.svg" alt="">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="#">
+                <img class="contact__social-img" src="images/whatsapp.svg" alt="">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="#">
+                <img class="contact__social-img" src="images/youtube.svg" alt="">
+              </a>
+            </li>
+          </ul>
+          <div class="contact__box">
+            <p class="contact__text">
+              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock
+            </p>
+            <a class="contact__phone" href="tel:+14158297934">(415) 829-7934</a>
+            <div class="contact__st">725 Green St</div>
+            <div class="contact__city">San Francisco, California(CA), 94133</div>
+            <a href="mailto:ouremailaddress@email.com" class="info-email">
+              ouremailaddress@email.com
+            </a>
+          </div>
+
+          <form class="contact__form">
+            <input class="contact__form-input" placeholder="Your name" type="text">
+            <input class="contact__form-input" placeholder="Your e-mail" type="email">
+            <textarea class="contact__form-area" placeholder="Your message"></textarea>
+            <button class="contact__form-btn" type="submit">Send</button>
+          </form>
+        </div>
+      </section>
+      
     </main>
 
     <footer class="footer">
@@ -89,7 +147,7 @@
               <p class="footer__info-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing <br> schlitz you probably occupy
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+              <a class="info-email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
