--- a/app/contacts.html
+++ b/app/contacts.html
@@ -133,6 +133,251 @@
           </form>
         </div>
       </section>
+
+      <div class="container-fluid">
+        <div class="contact-slider">
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-1.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-2.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-3.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-4.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-5.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-6.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-7.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-8.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-9.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-10.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-1.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-2.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-3.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-4.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-5.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-6.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-7.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-8.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-9.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-10.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-1.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-2.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-3.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-4.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-5.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-6.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-7.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-8.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-9.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+          <a class="contact-slider__link" href="">
+            <img class="contact-slider__img" src="images/content/collection2-10.jpg" alt="">
+            <div class="contact-slider__info">
+              <p class="contact-slider__title">
+                Truffaut literally trust
+              </p>
+            </div>
+          </a>
+        </div>
+      </div>    
       
     </main>
 
