--- a/app/about.html
+++ b/app/about.html
@@ -231,7 +231,7 @@
               <p class="footer__info-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing <br> schlitz you probably occupy
               </p>
-              <a href="mailto:ouremailaddress@email.com" class="footer__info-email">
+              <a class="info-email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
