--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/style.min.css">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
- </head>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;1,300&display=swap" rel="stylesheet">
+</head>
 
 <body>
   <div class="wrapper">
