--- a/app/page.html
+++ b/app/page.html
@@ -56,7 +56,7 @@
                 actually squid. Slow-carb everyday carry +1 art party
                 microdosing, put a bird on it brooklyn
               </p>
-              <img class="rightside-menu__images" src="images/rectangle.jpg" alt="images">
+              <img class="rightside-menu__images" src="images/content/rectangle.jpg" alt="images">
             </div>           
           </div>
         </div>
