--- a/app/blog.html
+++ b/app/blog.html
@@ -89,9 +89,11 @@
                   <a class="blog__item-author" href="#">Ann Summers |</a> 
                   <a class="blog__item-theme" href="#">Bedroom Furniture</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Red selfies edison bulb four dollar toast humblebrag for the furniture
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">
+                    Red selfies edison bulb four dollar toast humblebrag for the furniture
+                  </h3>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table
                 </p>
@@ -116,14 +118,16 @@
                   <a class="blog__item-author" href="#">by Lux Morningstar |</a> 
                   <a class="blog__item-theme" href="#">Design</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Authentic kogi shabby chic
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">                    
+                    Authentic kogi shabby chic
+                  </h3>
+                </a>
               </div>
 
               <div class="blog__item">
                 <div class="article-slider__box">
-                  <img class="article-slider__img" src="images/blog/blog2.jpg" alt="images">
+                  <img class="article-slider__img" src="images/blog/blog5.jpg" alt="images">
                   <img class="article-slider__img" src="images/blog/blog3.jpg" alt="images">
                   <img class="article-slider__img" src="images/blog/blog4.jpg" alt="images">
                 </div>
@@ -132,16 +136,18 @@
                   <a class="blog__item-author" href="#">Ann Summers |</a> 
                   <a class="blog__item-theme" href="#">Table Furniture</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Semiotics fixie four dollar toast, next level woke
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">
+                    Semiotics fixie four dollar toast, next level woke
+                  </h3>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table
                 </p>
               </div>
 
               <div class="pagination">
-                <a class="pagination__arrow" href="#">
+                <a class="pagination__arrow pagination__arrow--disabled" href="#">
                   <img class="pagination__arrow-icon" src="images/arrow-left.svg" alt="arrow icon">
                 </a>
                 <ui class="pagination__list">
